@@ -22,11 +22,9 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.apache.commons.io.FilenameUtils;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.net.URI;
+import java.net.URL;
 import java.util.Properties;
 
 /**
@@ -38,6 +36,7 @@ import java.util.Properties;
 @Builder
 public class VersionInfo {
 
+    private static final String HTML_SPACE = "%2520";   //Space: "%20" -> % character: "%25" -> "%2520"
     private static final int SUFFIX_LENGTH = "-git.properties".length();
 
     private String groupId;
@@ -77,7 +76,9 @@ public class VersionInfo {
     }
 
     public VersionInfo(URI uri) throws IOException {
-        String path = uri.toString();
+        //Can't use new File(uri).getPath() for URIs pointing to resources in JARs
+        //But URI.toString() returns "%2520" instead of spaces in path - https://github.com/deeplearning4j/deeplearning4j/issues/6056
+        String path = uri.toString().replaceAll(HTML_SPACE, " ");
         int idxOf = path.lastIndexOf('/');
         idxOf = Math.max(idxOf, path.lastIndexOf('\\'));
         String filename;
@@ -94,7 +95,8 @@ public class VersionInfo {
 
         //Extract values from properties file:
         Properties properties = new Properties();
-        try (InputStream is = uri.toURL().openStream() ) {
+        URL u = new URL(path);  //Can't use URI.toUrl() due to spaces in path
+        try (InputStream is = new BufferedInputStream(u.openStream())){
             properties.load(is);
         }
 
